SET(EXE_NAME push_monibuca)
SET(EXECUTABLE_FILES monibuca_pusher.cpp push_node.cpp zlapi_worker.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lib)
NEW_EXECUTABLE(${EXE_NAME} SHARED)

TARGET_LINK_LIBRARIES(${EXE_NAME} ${FFMPEG_LIBRARIES} ${ZL_LIBRARY_COMPONENTS}
                        ${Boost_LIBRARIES} ${OpenCV_LIBRARIES})
TARGET_LINK_LIBRARIES(${EXE_NAME} zlmediakit mk_api zltoolkit pthread)

TARGET_COMPILE_OPTIONS(${EXE_NAME} PUBLIC -D_SCL_SECURE_NO_WARNINGS)