SET(EXE_NAME rtsp_player)
SET(EXECUTABLE_FILES main.cpp zlapi_player.cpp)

Message(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
NEW_EXECUTABLE(${EXE_NAME} SHARED)

TARGET_LINK_LIBRARIES(${EXE_NAME} ${FFMPEG_LIBRARIES} ${Boost_LIBRARIES} ${OpenCV_LIBRARIES})
TARGET_LINK_LIBRARIES(${EXE_NAME} zlmediakit mk_api zltoolkit pthread)

TARGET_COMPILE_OPTIONS(${EXE_NAME} PUBLIC -D_SCL_SECURE_NO_WARNINGS)